--- a/Server/package.json
+++ b/Server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Shopping Hub",
+  "name": "ShoppingHub",
   "version": "1.0.0",
   "description": "E-commerce Portal",
   "main": "server.js",
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
     "express": "^4.17.1",
+    "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.13",
     "passport": "^0.4.0",
