--- a/Server/package.json
+++ b/Server/package.json
@@ -17,6 +17,7 @@
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.13",
+    "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "validator": "^11.0.0"
